Fixed Markdown page width on small screens

--- a/css/mhslinks.css
+++ b/css/mhslinks.css
@@ -230,4 +230,7 @@ a
 	{
 		width: 100%;
 	}
+	.inner-markdown {
+		width: 80vw;
+	}
 }
